cmake_minimum_required(VERSION 3.6)
project(cpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp)

set(SOURCE_FILES
        3Sum/3Sum.cpp
        3SumClosest/3SumClosest.cpp
        4Sum/4Sum.cpp
        addAndSearchWord/AddAndSearchWord.cpp
        addBinary/addBinary.cpp
        addDigits/addDigits.cpp
        additiveNumber/AdditiveNumber.cpp
        addStrings/AddStrings.cpp
        addTwoNumbers/addTwoNumbers.cpp
        anagrams/GroupAnagrams.cpp
        anagrams/ValidAnagram.cpp
        arithmeticSlices/ArithmeticSlices.cpp
        balancedBinaryTree/balancedBinaryTree.cpp
        basicCalculator/BasicCalculator.cpp
        basicCalculator/BasicCalculator.II.cpp
        bestTimeToBuyAndSellStock/bestTimeToBuyAndSellStock.cpp
        bestTimeToBuyAndSellStock/bestTimeToBuyAndSellStock.II.cpp
        bestTimeToBuyAndSellStock/bestTimeToBuyAndSellStock.III.cpp
        bestTimeToBuyAndSellStock/bestTimeToBuyAndSellStock.IV.cpp
        binarySearchTreeIterator/binarySearchTreeIterator.cpp
        binaryTreeInorderTraversal/binaryTreeInorderTraversal.cpp
        binaryTreeLevelOrderTraversal/binaryTreeLevelOrderTraversal.cpp
        binaryTreeLevelOrderTraversal/binaryTreeLevelOrderTraversal.II.cpp
        binaryTreeMaximumPathSum/binaryTreeMaximumPathSum.cpp
        binaryTreePaths/binaryTreePaths.cpp
        binaryTreePostorderTraversal/binaryTreePostorderTraversal.cpp
        binaryTreePreorderTraversal/binaryTreePreorderTraversal.cpp
        binaryTreeRightSideView/binaryTreeRightSideView.cpp
        binaryTreeUpsideDown/binaryTreeUpsideDown.cpp
        binaryTreeZigzagLevelOrderTraversal/binaryTreeZigzagLevelOrderTraversal.cpp
        binaryWatch/BinaryWatch.cpp
        bitwiseANDOfNumbersRange/BitwiseAndOfNumbersRange.cpp
        bulbSwitcher/bulbSwitcher.cpp
        bullsAndCows/bullsAndCows.cpp
        burstBalloons/BurstBalloons.cpp
        candy/candy.cpp
        climbStairs/climbStairs.cpp
        cloneGraph/cloneGraph.cpp
        coinChange/coinChange.cpp
        combinations/combinations.cpp
        combinationSum/combinationSum.cpp
        combinationSum/combinationSum.II.cpp
        combinationSum/combinationSum.III.cpp
        combinationSumIV/combinationSumIV.cpp
        compareVersionNumbers/compareVersionNumbers.cpp
        constructBinaryTreeFromInorderAndPostorderTraversal/constructBinaryTreeFromInorderAndPostorderTraversal.cpp
        constructBinaryTreeFromPreorderAndInorderTraversal/constructBinaryTreeFromPreorderAndInorderTraversal.cpp
        containerWithMostWater/containerWithMostWater.cpp
        containsDuplicate/ContainsDuplicate.cpp
        containsDuplicate/ContainsDuplicate.II.cpp
        containsDuplicate/ContainsDuplicate.III.cpp
        convertANumberToHexadecimal/ConvertANumberToHexadecimal.cpp
        convertSortedArrayToBinarySearchTree/convertSortedArrayToBinarySearchTree.cpp
        convertSortedListToBinarySearchTree/convertSortedListToBinarySearchTree.cpp
        copyListWithRandomPointer/copyListWithRandomPointer.cpp
        countAndSay/countAndSay.cpp
        countCompleteTreeNodes/CountCompleteTreeNodes.cpp
        countingBits/CountingBits.cpp
        countOfRangeSum/CountOfRangeSum.cpp
        countOfSmallerNumbersAfterSelf/countOfSmallerNumbersAfterSelf.cpp
        countPrimes/CountPrimes.cpp
        courseSchedule/CourseSchedule.cpp
        courseSchedule/CourseSchedule.II.cpp
        createMaximumNumber/CreateMaximumNumber.cpp
        decodeString/DecodeString.cpp
        decodeWays/decodeWays.cpp
        deleteNodeInALinkedList/DeleteNodeInALinkedList.cpp
        differentWaysToAddParentheses/DifferentWaysToAddParentheses.cpp
        distinctSubsequences/distinctSubsequences.cpp
        divideTwoInt/divideTwoInt.cpp
        dungeonGame/dungeonGame.cpp
        editDistance/editDistance.cpp
        eliminationGame/EliminationGame.cpp
        evaluateDivision/EvaluateDivision.cpp
        evaluateReversePolishNotation/evaluateReversePolishNotation.cpp
        excelSheetColumnNumber/excelSheetColumnNumber.cpp
        excelSheetColumnTitle/excelSheetColumnTitle.cpp
        expressionAddOperators/ExpressionAddOperators.cpp
        factorialTrailingZeroes/factorialTrailingZeroes.cpp
        findMedianFromDataStream/FindMedianFromDataStream.cpp
        findMinimumInRotatedSortedArray/findMinimumInRotatedSortedArray.cpp
        findMinimumInRotatedSortedArray/findMinimumInRotatedSortedArray.II.cpp
        findPeakElement/findPeakElement.cpp
        findTheDuplicateNumber/findTheDuplicateNumber.cpp
        firstBadVersion/FirstBadVersion.cpp
        firstMissingPositive/firstMissingPositive.cpp
        firstUniqueCharacterInAString/FirstUniqueCharacterInAString.cpp
        fizzBuzz/FizzBuzz.cpp
        flattenBinaryTreeToLinkedList/flattenBinaryTreeToLinkedList.cpp
        flattenNestedListIterator/FlattenNestedListIterator.cpp
        fractionToRecurringDecimal/fractionToRecurringDecimal.cpp
        frogJump/FrogJump.cpp
        gasStation/gasStation.cpp
        generateParentheses/generateParentheses.cpp
        grayCode/grayCode.cpp
        h-Index/h-Index.cpp
        h-Index/h-Index.II.cpp
        happyNumber/HappyNumber.cpp
        houseRobber/houseRobber.cpp
        houseRobber/houseRobber.II.cpp
        houseRobber/houseRobberIII.cpp
        implementQueueUsingStacks/ImplementQueueUsingStacks.cpp
        implementStackUsingQueues/ImplementStackUsingQueues.cpp
        implementTriePrefixTree/ImplementTriePrefixTree.cpp
        increasingTripletSubsequence/increasingTripletSubsequence.cpp
        insertDeleteGetRandom/InsertDeleteGetrandomO1.cpp
        insertDeleteGetRandom/InsertDeleteGetrandomO1DuplicatesAllowed.cpp
        insertInterval/insertInterval.cpp
        insertionSortList/insertionSortList.cpp
        integerBreak/IntegerBreak.cpp
        integerReplacement/IntegerReplacement.cpp
        integerToEnglishWords/IntegerToEnglishWords.cpp
        integerToRoman/integerToRoman.cpp
        interleavingString/interleavingString.cpp
        intersectionOfTwoArrays/intersectionOfTwoArrays.cpp
        intersectionOfTwoArrays/intersectionOfTwoArraysII.cpp
        intersectionOfTwoLinkedLists/intersectionOfTwoLinkedLists.cpp
        invertBinaryTree/InvertBinaryTree.cpp
        isomorphicStrings/IsomorphicStrings.cpp
        isSubsequence/IsSubsequence.cpp
        jumpGame/jumpGame.cpp
        jumpGame/jumpGame.II.cpp
        kthLargestElementInAnArray/KthLargestElementInAnArray.cpp
        kthSmallestElementInaBST/KthSmallestElementInABst.cpp
        largestNumber/largestNumber.cpp
        largestRectangleInHistogram/largestRectangleInHistogram.cpp
        lengthOfLastWord/lengthOfLastWord.cpp
        letterCombinationsOfAPhoneNumber/letterCombinationsOfAPhoneNumber.cpp
        lexicographicalNumbers/LexicographicalNumbers.cpp
        linkedListCycle/linkedListCycle.cpp
        linkedListCycle/linkedListCycle.II.cpp
        linkedListRandomNode/LinkedListRandomNode.cpp
        longestAbsoluteFilePath/LongestAbsoluteFilePath.cpp
        longestCommonPrefix/longestCommonPrefix.cpp
        longestConsecutiveSequence/longestConsecutiveSequence.cpp
        longestIncreasingPathInAMatrix/LongestIncreasingPathInAMatrix.cpp
        longestIncreasingSubsequence/longestIncreasingSubsequence.cpp
        longestPalindrome/LongestPalindrome.cpp
        longestPalindromicSubstring/longestPalindromicSubstring.cpp
        longestSubstringWithAtLeastKRepeatingCharacters/LongestSubstringWithAtLeastKRepeatingCharacters.cpp
        longestSubstringWithAtMostTwoDistinctCharacters/longestSubstringWithAtMostTwoDistinctCharacters.cpp
        longestSubstringWithoutRepeatingCharacters/longestSubstringWithoutRepeatingCharacters.cpp
        longestValidParentheses/longestValidParentheses.cpp
        lowestCommonAncestorOfABinarySearchTree/LowestCommonAncestorOfABinarySearchTree.cpp
        lowestCommonAncestorOfABinaryTree/LowestCommonAncestorOfABinaryTree.cpp
        LRUCache/LRUCache.cpp
        majorityElement/majorityElement.cpp
        majorityElement/majorityElement.II.cpp
        maximalRectangle/maximalRectangle.cpp
        maximalSquare/MaximalSquare.cpp
        maximumDepthOfBinaryTree/maximumDepthOfBinaryTree.cpp
        maximumGap/maximumGap.cpp
        maximumProductSubarray/maximumProductSubarray.cpp
        maximumSubArray/maximumSubArray.cpp
        maxPointsOnALine/maxPointsOnALine.cpp
        medianOfTwoSortedArrays/medianOfTwoSortedArrays.cpp
        mergeIntervals/mergeIntervals.cpp
        mergeKSortedLists/mergeKSortedLists.cpp
        mergeTwoSortedArray/mergeTwoSortedArray.cpp
        mergeTwoSortedList/mergeTwoSortedList.cpp
        minimumDepthOfBinaryTree/minimumDepthOfBinaryTree.cpp
        minimumHeightTrees/MinimumHeightTrees.cpp
        minimumPathSum/minimumPathSum.cpp
        minimumSizeSubarraySum/MinimumSizeSubarraySum.cpp
        minimumWindowSubstring/minimumWindowSubstring.cpp
        miniParser/MiniParser.cpp
        minStack/minStack.cpp
        missingNumber/MissingNumber.cpp
        missingRanges/missingRanges.cpp
        moveZeroes/moveZeroes.cpp
        multiplyStrings/multiplyStrings.cpp
        nextPermutation/nextPermutation.cpp
        nimGame/nimGame.cpp
        nQueens/nQueuens.cpp
        nQueens/nQueuens.II.cpp
        nthDigit/NthDigit.cpp
        numberOf1Bits/numberOf1Bits.cpp
        numberOfDigitOne/NumberOfDigitOne.cpp
        numberOfIslands/NumberOfIslands.cpp
        oddEvenLinkedList/OddEvenLinkedList.cpp
        oneEditDistance/oneEditDistance.cpp
        palindromeLinkedList/PalindromeLinkedList.cpp
        palindromeNumber/palindromeNumber.cpp
        palindromePartitioning/palindromePartitioning.cpp
        palindromePartitioning/palindromePartitioning.II.cpp
        partitionList/partitionList.cpp
        pascalTriangle/pascalTriangle.cpp
        pascalTriangle/pascalTriangle.II.cpp
        patchingArray/PatchingArray.cpp
        pathSum/pathSum.cpp
        pathSum/pathSum.II.cpp
        peekingIterator/PeekingIterator.cpp
        perfectRectangle/PerfectRectangle.cpp
        perfectSquares/PerfectSquares.cpp
        permutations/permutations.cpp
        permutations/permutations.II.cpp
        permutationSequence/permutationSequence.cpp
        plusOne/plusOne.cpp
        populatingNextRightPointersInEachNode/populatingNextRightPointersInEachNode.cpp
        populatingNextRightPointersInEachNode/populatingNextRightPointersInEachNode.II.cpp
        pow/pow.cpp
        powerOfFour/PowerOfFour.cpp
        powerOfThree/PowerOfThree.cpp
        powerOfTwo/PowerOfTwo.cpp
        productOfArrayExceptSelf/ProductOfArrayExceptSelf.cpp
        queueReconstructionByHeight/QueueReconstructionByHeight.cpp
        randomPickIndex/RandomPickIndex.cpp
        rangeSumQuery-Immutable/rangeSumQuery-Immutable.cpp
        rangeSumQuery-Immutable/rangeSumQuery-Mutable/RangeSumQueryMutable.cpp
        rangeSumQuery2D-Immutable/RangeSumQuery2dImmutable.cpp
        ransomNote/RansomNote.cpp
        readNCharactersGivenRead4/readNCharactersGivenRead4.cpp
        readNCharactersGivenRead4/readNCharactersGivenRead4.II.cpp
        recoverBinarySearchTree/recoverBinarySearchTree.cpp
        rectangleArea/RectangleArea.cpp
        regularExpressionMatching/regularExpressionMatching.cpp
        removeDuplicatesFromSortedArray/removeDuplicatesFromSortedArray.cpp
        removeDuplicatesFromSortedArray/removeDuplicatesFromSortedArray.II.cpp
        removeDuplicatesFromSortedList/removeDuplicatesFromSortedList.cpp
        removeDuplicatesFromSortedList/removeDuplicatesFromSortedList.II.cpp
        removeElement/removeElement.cpp
        removeInvalidParentheses/RemoveInvalidParentheses.cpp
        removeKDigits/RemoveKDigits.cpp
        removeLinkedListElements/RemoveLinkedListElements.cpp
        removeNthNodeFromEndOfList/removeNthNodeFromEndOfList.cpp
        reorderList/reorderList.cpp
        repeatedDNASequences/repeatedDNASequences.cpp
        restoreIPAddresses/restoreIPAddresses.cpp
        reverseBits/reverseBits.cpp
        reverseInteger/reverseInteger.cpp
        reverseLinkedList/reverseLinkedList.cpp
        reverseLinkedList/reverseLinkedList.II.cpp
        reverseNodesInKGroup/reverseNodesInKGroup.cpp
        reverseString/ReverseString.cpp
        reverseVowelsOfAString/reverseVowelsOfAString.cpp
        reverseWordsInAString/reverseWordsInAString.cpp
        reverseWordsInAString/reverseWordsInAString.II.cpp
        romanToInteger/romanToInteger.cpp
        rotateArray/rotateArray.cpp
        rotateFunction/RotateFunction.cpp
        rotateImage/rotateImage.cpp
        rotateList/rotateList.cpp
        sameTree/sameTree.cpp
        scrambleString/scrambleString.cpp
        search2DMatrix/search2DMatrix.cpp
        search2DMatrix/search2DMatrix.II.cpp
        searchForRange/searchForRange.cpp
        searchInRotatedSortedArray/searchInRotatedSortedArray.cpp
        searchInRotatedSortedArray/searchInRotatedSortedArray.II.cpp
        searchInsertPosition/searchInsertPosition.cpp
        serializeAndDeserializeBinaryTree/SerializeAndDeserializeBinaryTree.cpp
        setMatrixZeroes/setMatrixZeroes.cpp
        shortestPalindrome/ShortestPalindrome.cpp
        shuffleAnArray/ShuffleAnArray.cpp
        simplifyPath/simplifyPath.cpp
        singleNumber/singleNumber.cpp
        singleNumber/singleNumber.II.cpp
        singleNumber/singleNumber.III.cpp
        slidingWindowMaximum/SlidingWindowMaximum.cpp
        sortColors/sortColors.cpp
        sortList/sortList.cpp
        spiralMatrix/spiralMatrix.cpp
        spiralMatrix/spiralMatrix.II.cpp
        splitArrayLargestSum/SplitArrayLargestSum.cpp
        sqrt/sqrt.cpp
        stringToIntegerAtoi/stringToIntegerAtoi.cpp
        strStr/strStr.cpp
        subsets/subsets.cpp
        subsets/subsets.II.cpp
        substringWithConcatenationOfAllWords/substringWithConcatenationOfAllWords.cpp
        sudokuSolver/sudokuSolver.cpp
        summaryRanges/SummaryRanges.cpp
        sumOfLeftLeaves/SumOfLeftLeaves.cpp
        sumRootToLeafNumber/sumRootToLeafNumber.cpp
        surroundedRegions/surroundedRegions.cpp
        swapNodesInPairs/swapNodesInPairs.cpp
        symmetricTree/symmetricTree.cpp
        textJustification/textJustification.cpp
        theSkylineProblem/TheSkylineProblem.cpp
        thirdMaximumNumber/ThirdMaximumNumber.cpp
        topKFrequentElements/topKFrequentElements.cpp
        trappingRainWater/trappingRainWater.cpp
        triangle/triangle.cpp
        twoSum/twoSum.cpp
        twoSum/twoSum.II.cpp
        twoSum/twoSum.III.cpp
        uglyNumber/UglyNumber.cpp
        uglyNumber/UglyNumber.II.cpp
        uniqueBinarySearchTrees/uniqueBinarySearchTrees.cpp
        uniqueBinarySearchTrees/uniqueBinarySearchTrees.II.cpp
        uniquePaths/uniquePaths.cpp
        uniquePaths/uniquePaths.II.cpp
        UTF8Validation/UTF8Validation.cpp
        validateBinarySearchTree/validateBinarySearchTree.cpp
        validNumber/validNumber.cpp
        validPalindrome/validPalindrome.cpp
        validParentheses/validParentheses.cpp
        validSudoku/validSudoku.cpp
        wiggleSubsequence/wiggleSubsequence.cpp
        wildcardMatching/wildcardMatching.cpp
        wordBreak/wordBreak.cpp
        wordBreak/wordBreak.II.cpp
        wordLadder/wordLadder.cpp
        wordLadder/wordLadder.II.cpp
        wordPattern/WordPattern.cpp
        wordSearch/wordSearch.cpp
        wordSearch/wordSearch.II.cpp
        zigZagConversion/zigZagConversion.cpp
        )
add_executable(cpp ${SOURCE_FILES})